@@ -41,6 +41,7 @@
 #include <utime.h>
 
 #include <gvm/base/drop_privileges.h> /* for drop_privileges */
+#include <gvm/base/proctitle.h>
 
 #include <openvas/base/nvticache.h>       /* for nvticache_add */
 #include <openvas/nasl/nasl.h>
@@ -48,7 +49,6 @@
 #include <openvas/misc/nvt_categories.h>  /* for ACT_SCANNER */
 #include <openvas/misc/plugutils.h>     /* for plug_set_launch */
 #include <openvas/misc/internal_com.h>  /* for INTERNAL_COMM_CTRL_FINISHED */
-#include <openvas/misc/openvas_proctitle.h>
 #include <openvas/misc/prefs.h>         /* for prefs_get_bool */
 
 #include "pluginload.h"
