@@ -27,9 +27,10 @@
 
 #include <stdio.h>
 
+#include <gvm/base/proctitle.h>
+
 #include <openvas/nasl/nasl.h>
 #include <openvas/base/nvticache.h>  /* for nvticache_new */
-#include <openvas/misc/openvas_proctitle.h>
 #include <openvas/misc/prefs.h>      /* for prefs_get() */
 
 #include <glib.h>
